[package]
name = "spider-test-telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.9.2"
dotenv = "0.15.0"
uuid = { version = "1.18.1", features = ["v4"] }
